<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_new_event"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:minHeight="50dp"
                android:minWidth="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Back"
                android:textAppearance="?android:textAppearanceLarge"
                android:background="@drawable/border_button"
                android:textColor="#C8C5BC"
                android:text="@string/X"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/activity_new_event"
                android:textColor="#C8C5BC"
                android:textSize="25sp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addEvent"
                android:minHeight="50dp"
                android:minWidth="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:background="@drawable/border_button"
                android:textColor="#C8C5BC"
                android:text="@string/add"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:contentDescription="@string/description_text"
                android:src="@drawable/text" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01" />

            <EditText
                android:id="@+id/newNameEvent"
                android:minHeight="50dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.89"
                android:ems="0"
                android:inputType="text"
                android:textColorHint="#C8C5BC"
                android:textSize="20sp"
                android:autofillHints=""
                android:hint="@string/name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/border"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:contentDescription="@string/description_place"
                android:src="@drawable/location" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01" />

            <EditText
                android:id="@+id/newLocationEvent"
                android:minHeight="50dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColorHint="#C8C5BC"
                android:layout_weight="0.89"
                android:ems="0"
                android:inputType="text"
                android:textSize="20sp"
                android:autofillHints=""
                android:hint="@string/place" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/newButtonDateEvent"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:src="@drawable/calendar"
                    android:contentDescription="@string/description_date"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01" />

                <EditText
                    android:id="@+id/newDateEvent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.89"
                    android:textColorHint="#C8C5BC"
                    android:ems="10"
                    android:hint="@string/date"
                    android:inputType="date"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:autofillHints=""
                    android:textSize="20sp" />

            </LinearLayout>


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/newAllDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minWidth="150dp"
                android:minHeight="50dp"
                android:textColor="#C8C5BC"
                android:text="@string/all_day"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/newButtonTimeStartEvent"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:src="@drawable/time"
                    android:contentDescription="@string/description_time"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01" />

                <EditText
                    android:id="@+id/newTimeStartEvent"
                    android:minHeight="50dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.89"
                    android:ems="10"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:textColorHint="#C8C5BC"
                    android:hint="@string/timeStart"
                    android:focusable="false"
                    android:longClickable="false"
                    android:cursorVisible="false"
                    android:inputType="datetime" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/newButtonTimeEndEvent"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:src="@drawable/time"
                    android:contentDescription="@string/description_time"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01" />

                <EditText
                    android:id="@+id/newTimeEndEvent"
                    android:minHeight="50dp"
                    android:minWidth="50dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.89"
                    android:ems="10"
                    android:layout_gravity="center"
                    android:textColorHint="#C8C5BC"
                    android:focusable="false"
                    android:longClickable="false"
                    android:cursorVisible="false"
                    android:textSize="20sp"
                    android:hint="@string/timeEnd"
                    android:inputType="datetime" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>