<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".New_Alarm"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/alarmBack"
                android:minHeight="50dp"
                android:minWidth="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:background="@drawable/border_button"
                android:textColor="#C8C5BC"
                android:text="@string/X"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm"
                android:textColor="#C8C5BC"
                android:textSize="25sp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/alarmEdit"
                android:minHeight="50dp"
                android:minWidth="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:background="@drawable/border_button"
                android:textColor="#C8C5BC"
                android:text="@string/add"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:contentDescription="@string/description_text"
                android:src="@drawable/text" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.02" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/name_alarm_edit"
                    android:minHeight="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="#C8C5BC"
                    android:textSize="20sp"
                    android:autofillHints=""
                    android:hint="@string/name" />

                <EditText
                    android:id="@+id/description_alarm_edit"
                    android:minHeight="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="#C8C5BC"
                    android:textSize="20sp"
                    android:autofillHints=""
                    android:hint="@string/description" />
            </LinearLayout>

        </LinearLayout>

        <TimePicker
            android:id="@+id/edit_time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:numbersTextColor="#C8C5BC"
            android:background="@drawable/border"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/alarm_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:background="@drawable/border_button"
            android:textColor="#C8C5BC"
            android:text="@string/remove"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>