<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Show_event"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:minHeight="50dp"
                android:minWidth="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Back"
                android:textAppearance="?android:textAppearanceLarge"
                android:background="@drawable/border_button"
                android:textColor="#C8C5BC"
                android:text="@string/X"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/activity_name_event"
                android:textColor="#C8C5BC"
                android:textSize="25sp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/editEvent"
                android:minHeight="50dp"
                android:minWidth="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:background="@drawable/border_button"
                android:onClick="Remove"
                android:textColor="#C8C5BC"
                android:text=""/>

        </LinearLayout>

        <TextView
            android:id="@+id/show_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textColor="#C8C5BC"
            android:layout_marginBottom="20dp"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/show_event_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textColor="#C8C5BC"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/show_event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textColor="#C8C5BC"
            android:textSize="15sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/removeEvent"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:background="@drawable/border_button"
            android:textColor="#C8C5BC"
            android:layout_gravity="center"
            android:text="@string/remove"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>